--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "timer",
   "version": "0.1.1",
   "private": false,
+  "license": "MIT",
   "dependencies": {
     "final-form": "^3.0.0",
     "final-form-arrays": "^1.0.0",
@@ -11,7 +12,8 @@
     "react-final-form": "^2.0.0",
     "react-final-form-arrays": "^1.0.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "styled-components": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
