--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-dom": "^16.2.0",
     "react-final-form": "^2.0.0",
     "react-final-form-arrays": "^1.0.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
     "styled-components": "^2.3.0"
   },
   "scripts": {
