--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
-    "styled-components": "^2.3.0"
+    "styled-components": "^2.3.0",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
